--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "microsoft/azure-storage-common",
+    "name": "dockflow/azure-storage-common",
     "version": "1.5.0",
     "description": "This project provides a set of common code shared by Azure Storage Blob, Table, Queue and File PHP client libraries.",
     "keywords": [ "php", "azure", "storage", "sdk", "common" ],
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-		"guzzlehttp/guzzle": "~6.0"
+		"guzzlehttp/guzzle": "*"
     },
     "autoload": {
         "psr-4": {
